lintian (2.5.25) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/cruft.{desc,pm}:
    + [BR] Add a forgotten return statement, and avoid
      false positive for deployJava.js (Closes: #745152).
    + [BR] Fix another false positive in GFDL detection.
  * checks/description.{desc,pm}:
    + [NT] Apply patch from Anders Jonsson to check spelling
      of the package synopsis.  (Closes: #747266)
  * checks/files.{desc,pm}:
    + [RG,NT] Check for invalid named p11-kit modules in
      /usr/share/p11-kit modules.  (Closes: #741346)
    + [BR] Detect cross architecture pkg-config file.
    + [BR] Add a sanity check for pkg-config files.
      (Closes: #676803).

  * data/cruft/missing-dir-search-path:
    + [BR] Close false positive for mathjax, search under
      /unpacked.
    + [BR] Fix another false positive for emscripten.
  * data/files/js-libraries:
    + [NT] Apply patch from Marcelo Jorge Vieira to correct
      a regular expression for finding embedded copies of
      libjs-jquery-history.  (Closes: #753077)
  * data/init.d/virtual_facilities:
    + [NT] Apply patch from Guillem Jover to fix a typo.
  * data/scripts/interpreters:
    + [NT] The texlua binary is now provided by
      texlive-binaries (>= 2014.20140512.33982) instead of
      luatex.  Thanks to Norbert Preining for reporting this.
      (Closes: #752611)
  * data/symlinks/well-known-symlinks-target:
    + [NT] Apply patch from Guillem Jover to fix a typo in
      a regex.  (Closes: #752229)

  * debian/control:
    + [NT] Add Breaks/Replaces for funny-manpages due to a
      bug in funny-manpages before 1.3-5.1.  Thanks to Adrian
      Bunk for reporting.  (Closes: #753165)

  * reporting/config:
    + [NT] Remove "$statistics_file" from the sample config.
  * reporting/harness:
    + [NT] Set the state cache to 0644 after creating it.
  * reporting/html_reports:
    + [NT] Move the statistics file to the harness state cache