@@ -1,0 +1,16 @@
+# regexp of know dual licensed rfc
+# please use number of rfc for sorting
+\Arfc\D?2629(?:\..*)?\Z
+\Arfc\D?3492(?:\..*)?\Z
+\Apunycode(?:\..*)?\Z
+\Arfc\D?5864(?:\..*)?\Z
+
+# draft
+\Adraft-ietf-cat-kerb-chg-password-\d+(?:\..*)?\Z
+\Adraft-morgan-ident-ext-\d+(?:\..*)?\Z
+\Adraft-riikonen-presence-attrs-\d+(?:\..*)?\Z
+\Adraft-riikonen-silc-commands-\d+(?:\..*)?\Z
+\Adraft-riikonen-silc-flags-payloads-\d+(?:\..*)?\Z
+\Adraft-riikonen-silc-ke-auth-\d+(?:\..*)?\Z
+\Adraft-riikonen-silc-pp-\d+(?:\..*)?\Z
+\Adraft-riikonen-silc-spec-\d+(?:\..*)?\Z
